--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-  <title>Explore it !</title>
+  <title>Home</title>
 
   <meta http-equiv="expires" content="0">
   <meta http-equiv="Cache-control" content="no-cache, no-store, must-revalidate">
@@ -63,7 +63,7 @@
           <div class="row feture-tabs" data-aos="fade-up">
             <div class="col-lg-6">
               <h3 style="margin-top: -40px;font-size: 45px;">
-               File Management System
+               FTP Server
               </h3>
               <br>
               <h3>
